# Patterns

./: CMakeLists.txt  ChainOfResponsibility.h  Patterns.cpp  Patterns.h  PatternsConfig.h.in  README.md
Sources/: ChainOfResponsibility.h  Command.h  Iterator.h  Mediator.h  Memento.h  Observer.h  Patterns.cpp  Patterns.h  State.h  Strategy.h
Sources/Behavioral/: Strategy.h  TemplateMethod.h  Visitor.h
Sources/Creational/: AbstractFactory.h  Builder.h  FactoryMethod.h  Prototype.h  Singleton.h
Sources/SmartPointers/: SmartPointers.h
Sources/Structural/: Adapter.h  Bridge.h  Composite.h  Decorator.h  Facade.h  Flyweight.h  Proxy.h
